<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_marginTop="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bad_script"
        android:gravity="center"
        android:text="@string/hello_text"
        android:textColor="@color/dark_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:checked="true"
            android:onClick="onClickChangeDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/bad_script"
            android:text="@string/tea_text"
            android:textAlignment="center"
            android:textColor="#2D2D2E"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:onClick="onClickChangeDrink"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/bad_script"
            android:text="@string/coffee_text"
            android:textAlignment="center"
            android:textColor="#2D2D2E"
            android:textSize="20sp"
            android:textStyle="bold"  />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/bad_script"
        android:gravity="center"
        android:text="@string/additions_text"
        android:textColor="@color/dark_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupDrink" />

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:text="@string/milk_text"
        android:fontFamily="@font/bad_script"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkBoxSugar"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        android:textAlignment="center"
        android:textColor="#2D2D2E"
        android:textSize="20sp"
        android:textStyle="bold" />
    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:text="@string/sugar_text"
        android:fontFamily="@font/bad_script"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
        app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        android:textAlignment="center"
        android:textColor="#2D2D2E"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:text="@string/lemon_text"
        android:fontFamily="@font/bad_script"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        android:textAlignment="center"
        android:textColor="#2D2D2E"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewChooseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/bad_script"
        android:gravity="center"
        android:text="@string/type_drink_text"
        android:textColor="@color/dark_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxMilk" />

    <Spinner
        android:id="@+id/spinnerTea"
        android:textColor="@color/dark_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_tea"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:visibility="visible"
        />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:textColor="@color/dark_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_coffee"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:visibility="invisible"
        />
    
    <ImageView
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onClickSendOrder"
        android:src="@drawable/button"
        android:contentDescription="@string/button_send_descr"
        app:layout_constraintTop_toBottomOf="@id/spinnerCoffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>